Corrige contagem de alunos por série nas inscrições
- Adiciona filtro idSerie no modelo Aluno (countAll e findAll)
- Adiciona filtro situacao=Matriculado na contagem de série
- Adiciona filtro situacao=Matriculado na contagem de turma
- Agora a contagem respeita: idSerie + idFilial + Matriculado + ano letivo ativo
- Corrige discrepância entre contagem (3253) e realidade (270)

--- a/public/pages/olimpiada-inscricoes.html
+++ b/public/pages/olimpiada-inscricoes.html
@@ -404,7 +404,7 @@
       if (!serieId || !filialId) return;
 
       try {
-        const response = await fetchAuth(`/alunos?idSerie=${serieId}&idFilial=${filialId}&limit=99999`);
+        const response = await fetchAuth(`/alunos?idSerie=${serieId}&idFilial=${filialId}&situacao=Matriculado&limit=99999`);
         const alunos = response.data || [];
         document.getElementById('infoSerie').textContent = 
           `${alunos.length} aluno(s) encontrado(s) nesta série`;
@@ -420,7 +420,7 @@
       if (!turmaId) return;
 
       try {
-        const response = await fetchAuth(`/alunos?idTurma=${turmaId}&limit=99999`);
+        const response = await fetchAuth(`/alunos?idTurma=${turmaId}&situacao=Matriculado&limit=99999`);
         const alunos = response.data || [];
         document.getElementById('infoTurma').textContent = 
           `${alunos.length} aluno(s) encontrado(s) nesta turma`;
